# MoodWeathetr

./: .gitignore  README.md  WarmLabel.pptx  方案书（中文版）.docx  暖言纸条策划.docx  暖言纸条项目方案-3b048e6516.pptx  请输入文本.md
python_flask/: .env.example  main.py  pyproject.toml  requirements.txt  test_api.py
python_flask/MMML/: api,py
python_flask/instance/: warmlabel.db
python_flask/local_resources/: README.md  emotion_feeds.json  music_list.json
python_flask/services/: resource_service.py
python_flask/utils/: api_response.py
python_flask/web_dist/: index.html
python_flask/web_dist/static/js/: index.13203511.js  index.3b531426.js  index.8f6e1c17.js  index.dfce1db6.js  index.f1e13723.js  index.f8f4705c.js  pages-EditNote-EditNote.0c65ea91.js  pages-EmotionFeed-EmotionFeed.56a865df.js  pages-EmotionFeed-EmotionFeed.8a5bb5d8.js  pages-EmotionFeed-EmotionFeed.c718966f.js  pages-EmotionTrend-EmotionTrend.0aa15bf5.js  pages-EmotionTrend-EmotionTrend.7a897151.js  pages-History_Page-History_Page.0c4f4f32.js  pages-History_Page-History_Page.28283329.js  pages-Initial_Interface-Initial_Interface.d469210a.js  pages-Login_Interface-Login_Interface.4c473b59.js  pages-Login_Interface-Login_Interface.f21b2708.js  pages-MainNoteSet-MainNoteSet.960fcd99.js  pages-MainNoteSet-MainNoteSet.a7304d32.js  pages-MainNoteSet-MainNoteSet.b8b6a298.js  pages-MainNoteSet-MainNoteSet.c05ff2db.js  pages-MainNoteSet-MainNoteSet.e2a8a12e.js  pages-Main_Page-Main_Page.bfb0844e.js  pages-Music-Music.581d6233.js  pages-NoteAnalysis-NoteAnalysis.04aa44ee.js  pages-NoteAnalysis-NoteAnalysis.05233caf.js  (+9 more)
(+47 files in other folders)
