[project]
name = "python-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-cors>=5.0.0",
    "flask-jwt-extended>=4.7.1",
    "werkzeug>=3.1.3",
    "requests>=2.32.3",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.9",
]
